# python-checkers

./: .coveragerc  .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
.github/workflows/: pytest.yml
checkers/: __init__.py  game.py  items.py
src/: guigame.py  main.py
src/Python_Checkers.egg-info/: PKG-INFO  SOURCES.txt
src/checkers/: __init__.py  __main__.py  board.py  cli.py  game.py  guigame.py  items.py  player.py
src/checkers/tests/: __init__.py  main.py  test_game.py  test_items.py
tests/: test_items.py
