[tool.poetry]
name = "python-checkers"
version = "0.1.0"
description = "Simple python checkers game to practice coding"
authors = ["Aaron Addleman <aaronaddleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
